<resources>>
    <string name="app_name">CDM</string>
    <string name="action_settings">Settings</string>
    <string name="zero">0</string>
    <string name="MobileDataDownloaded">Mobile Data Downloaded</string>
    <string name="Details">Details</string>
    <string-array name="UNIT">
        <item> KB </item>
        <item> MB </item>
        <item> GB </item>
    </string-array>
    <string name="title_activity_detailas">Detailas</string>
    <string name="title_activity_details">Details</string>
    <string name="mobile_data_limiter">MOBILE DATA LIMITER</string>
    <string name="days">Days</string>
    <string name="_0">0</string>
    <string name="not_used">Not used</string>
    <string name="to">to</string>
    <string name="limit">Limit</string>
    <string name="mb">MB</string>
    <string name="downloaded">Downloaded  :</string>
    <string name="uploaded">Uploaded  :</string>
    <string name="notifications">Notifications</string>
    <string name="wifi">wifi</string>
    <string name="off">Off</string>
    <string name="uploaded_">Uploaded  :</string>
    <string name="wifiImage">wifiDataImage</string>
    <string name="mobileImage">mobileDataImage</string>
</resources>
