<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.priyath.cdm.settings">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text = "@string/notifications"
        android:textSize = "30sp"
        android:textStyle="bold"
        android:textColor="#000000"
        android:id ="@+id/notifications"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart = "true"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/wifi"
        android:id = "@+id/wifiTextView"
        android:layout_below="@+id/notifications"
        android:textSize="30sp"
        />

    <Switch
        android:layout_width="100sp"
        android:layout_height="wrap_content"
        android:text="@string/off"
        android:textSize = "18sp"
        android:id="@+id/wifiSwitch"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="15sp"
        android:layout_below="@+id/notifications"
        />
</RelativeLayout>
