<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:card_view="http://schemas.android.com/tools"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.priyath.cdm.MainActivity"
    tools:showIn="@layout/activity_main">

    <android.support.v7.widget.CardView
        android:id="@+id/cardView1"
        android:layout_gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:foreground="?android:attr/selectableItemBackground"
        android:elevation="10dp"
        app:cardPreventCornerOverlap="false"
        app:cardUseCompatPadding="true"
        card_view:cardCornerRadius="10dp">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:id="@+id/relativeLayout">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/MobileDataDownloaded"
            android:textSize="20dp"
            android:id="@+id/textView"
            android:layout_alignParentTop="true"
            android:layout_alignParentStart="true" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/zero"
            android:id="@+id/textView2"
            android:layout_below="@+id/textView"
            android:layout_alignParentStart="true" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/unit1"
            android:layout_below="@+id/textView"
            android:layout_alignEnd="@+id/textView"
            android:layout_toEndOf="@+id/textView2"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Details"
            android:id="@+id/button"
            android:layout_alignBottom="@+id/unit1"
            android:layout_alignParentEnd="true"
            android:layout_alignTop="@+id/textView" />



    </RelativeLayout>



    </android.support.v7.widget.CardView>


    <android.support.v7.widget.CardView
        android:id="@+id/cardView2"
        android:layout_gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:elevation="5dp"

        card_view:cardCornerRadius="4dp"
        android:layout_below="@+id/cardView1">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/relativeLayout"
        android:layout_alignParentStart="true">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="WIFI Data Downloaded"
            android:textSize="20dp"
            android:id="@+id/textView3"
            android:layout_alignParentTop="true"
            android:layout_alignParentStart="true" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="0"
            android:id="@+id/textView4"
            android:layout_below="@+id/textView3"
            android:layout_alignParentStart="true" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/unit2"
            android:layout_below="@+id/textView3"
            android:layout_alignEnd="@+id/textView3"
            android:layout_toEndOf="@+id/textView4"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Details"
            android:id="@+id/button2"
            android:layout_alignParentEnd="true"
            android:layout_alignBottom="@+id/unit2"
            android:layout_alignParentTop="true" />
    </RelativeLayout>

    </android.support.v7.widget.CardView>
</RelativeLayout>
